--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -11,7 +11,8 @@
     </head>
     <body>
       
-        <H1>СЕТЕВАЯ БИБЛИОТЕКА</H1>
+      <H1>СЕТЕВАЯ БИБЛИОТЕКА</H1>
+        <span id="info" class="text-info">${info}</span>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <a class="navbar-brand" href="index">Меню</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +39,7 @@
               </c:if>
               
             </ul>
+            
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="text" placeholder="Search">
               <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
@@ -60,6 +62,6 @@
             </ul>
           </div>
         </nav>
-        <p id="info" class="text-info" >${info}</p>
+        
         <div class="container-fluid">
             
