--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -12,7 +12,7 @@
     <body>
       
       <H1>СЕТЕВАЯ БИБЛИОТЕКА</H1>
-        <span id="info" class="text-info">${info}</span>
+        
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <a class="navbar-brand" href="index">Меню</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,4 +64,6 @@
         </nav>
         
         <div class="container-fluid">
-            
+          <div class="row">
+            <p id="info" class="text-info">${info}</p>
+          </div>
