--- a/web/css/main.css
+++ b/web/css/main.css
@@ -9,7 +9,7 @@
   background-color: #2B3E50;
 }
 .bookDataImg{
-  height: 170px;
+  height: 160px;
   width: 140px;
 }
 .footer{
@@ -26,6 +26,13 @@
   flex-flow: column nowrap;
   width: 100vw;
   height: 100vh;*/
+}
+.profileWrap{
+     margin: 0 auto;
+     width: 30vw;
+}
+.profileWrap input{
+    width: 30vw;
 }
 .loginWrap{
   display: flex;
