--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -40,10 +40,10 @@
               
             </ul>
             
-            <form action="searchBook" class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="text" id="search" name="search" placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
+<!--            <form action="searchBook" class="form-inline my-2 my-lg-0">-->
+<input  class="my-2 my-lg-0 mr-sm-2" type="text" id="search" name="search" placeholder="Search">
+<!--              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>-->
             <ul class="navbar-nav">
               <c:if test="${null == user}">
                 <li class="nav-item">
