--- a/web/css/main.css
+++ b/web/css/main.css
@@ -8,9 +8,13 @@
 .title-bg{
   background-color: #2B3E50;
 }
-.bookDataImg{
+.indexBookDataImg{
   height: 160px;
   width: 140px;
+}
+.bookDataImg{
+  height: 360px;
+  width: 240px;
 }
 .footer{
   text-align: center;
@@ -41,7 +45,16 @@
   width: 30vw;
   height: 100vh;
 }
-.changeComment{
+.edit-comment-btn,
+.change-comment-btn{
+  width: 13vw;
+}
+.change-comment-btn{
     display: none;
+}
+.comment-btns{
+  width: 100%;
+  
+  align-content: flex-end;
 }
 
